--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,5 @@
 {
-	"useTabs": false,
-	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100
+  "$schema": "http://json.schemastore.org/prettierrc",
+  "printWidth": 100,
+  "proseWrap": "always"
 }
