don't enforce engines

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 strict-peer-dependencies=false
-engine-strict=true
+# yikes, this causes problems with pnpm. bug on their end?: https://github.com/pnpm/pnpm/issues/4203
+# engine-strict=true
