--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,2 @@
-strict-peer-dependencies=false
-# yikes, this causes problems with pnpm. bug on their end?: https://github.com/pnpm/pnpm/issues/4203
-# engine-strict=true
+engine-strict=true
+resolution-mode=highest
