--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
-  "$schema": "http://json.schemastore.org/prettierrc",
-  "printWidth": 100,
-  "proseWrap": "always"
+	"useTabs": true,
+	"singleQuote": true,
+	"trailingComma": "none",
+	"printWidth": 100,
+	"plugins": ["prettier-plugin-svelte"],
+	"pluginSearchDirs": ["."],
+	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
