--- a/package.json
+++ b/package.json
@@ -1,35 +1,23 @@
 {
-  "name": "trashthisweek",
-  "version": "0.1.0",
-  "private": true,
+  "name": "trashthisweek2",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "vitest",
-    "analyze": "cross-env ANALYZE=true npm run build",
-    "check-types": "tsc --noEmit"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "next": "15.1.6",
-    "postcss": "^8.5.1",
+    "@astrojs/react": "^4.2.0",
+    "@astrojs/vercel": "^8.0.5",
+    "@tailwindcss/vite": "^4.0.3",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "astro": "^5.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.3",
     "temporal-polyfill": "^0.2.5"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@next/bundle-analyzer": "^15.1.6",
-    "@types/node": "^22.13.1",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "cross-env": "^7.0.3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "typescript": "^5",
-    "vitest": "^3.0.4"
   }
 }
