--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "astro preview",
     "astro": "astro",
     "check-types": "tsc --noEmit",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "vitest"
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.14.0",
-    "typescript-eslint": "^8.23.0"
+    "typescript-eslint": "^8.23.0",
+    "vitest": "^3.0.5"
   }
 }
